# Youtube-RAG-Extension

./: LICENSE  RAG_EXPLANATION.md  README.md  TODO.md
backend/: main.py  model.py  pyproject.toml  rag.py
backend/data/faiss/: index.faiss  index.pkl
backend/data/faiss/HodCjnGv8Ag/: index.faiss  index.pkl
backend/data/faiss/J3nFOPoVnPw/: index.faiss  index.pkl
backend/data/faiss/KPpouY3N6Vs/: index.faiss  index.pkl
backend/data/faiss/PgXiJLmDMU0/: index.faiss  index.pkl
backend/data/faiss/ZFoNBxpXen4/: index.faiss  index.pkl
backend/data/faiss/ZQElzjCsl9o/: index.faiss  index.pkl
backend/data/faiss/d2kxUVwWWwU/: index.faiss  index.pkl
extension/: package-lock.json  package.json  tailwind.config.js  vite.config.js
extension/public/: index.html  manifest.json
extension/public/services/: background.js  content.js
extension/services/: background.js
extension/src/: App.css  App.jsx  index.css  main.jsx
extension/src/components/: AnswerBlock.jsx  AnswerPanel.jsx  ChatPanel.jsx  Header.jsx  Loader.jsx  QueryInput.jsx  SessionSidebar.jsx  TimestampChip.jsx
extension/src/components/chat/: ChatEmpty.jsx
extension/src/hooks/: useBackground.js
