[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.5",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "pypdf>=6.5.0",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
    "youtube-transcript-api>=1.2.3",
]
